Bug 62154 - Opentype feature 'locl' not active
Summary: Opentype feature 'locl' not active
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
4.0.1.2 release
Hardware: Other All
: medium major
Assignee: Caolán McNamara
URL:
Whiteboard: target:4.1.0
Keywords:
Depends on:
Blocks: 105448
  Show dependency treegraph
 
Reported: 2013-03-11 09:03 UTC by Georg Duffner
Modified: 2017-01-20 15:11 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
post patch behaviour (8.50 KB, image/png)
2013-03-11 21:52 UTC, Caolán McNamara
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Georg Duffner 2013-03-11 09:03:44 UTC
Since v4 Opentype features are supported, but some of those that should be active by default aren’t. Among others such important ones as ccmp (Character composition and decomposition) and locl (localized forms).

Steps to reproduce:
With Linux Libertine (non Graphite version) type cyrillic letters б д г п т, make them italic and mark them as serbian. They should now show serbian localized forms.

With EB Garamond 12: enter the letter “a” followed by uni0304 (combining macron) and uni0301 (combining acute) (under Gnome type ctrl+shift+u+304 and ctrl+shift+u+301; for other systems you’ll have to look up how to enter arbitrary unicode characters or copy this: ā́ ). It should show a perfectly stacking accent combination.
Comment 1 Georg Duffner 2013-03-11 09:16:43 UTC
Sorry about the noise with ccmp, it was a confusion of font versions: the one I was testing with only has a lookup for circumflex + acute or grave. The issue with locl still remains. I change the title to reflect this.
Comment 2 Caolán McNamara 2013-03-11 09:53:45 UTC
we run these through icu, and icu seems to default to apply locl, so it looks like we're not propagating the language down to IcuLayoutEngine::layout
Comment 3 Commit Notification 2013-03-11 17:07:20 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=0dd37cc76337d3e851f2270b08e0051dbdb366b1

Related: fdo#62154 correct font lang is a requirement for applying locl



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2013-03-11 21:50:54 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9d3df36463353bb8ec71cf35bd0bf5d79b5d3d66

Resolves: fdo#62154 propogate text language down to icu for locl



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Caolán McNamara 2013-03-11 21:52:18 UTC
Created attachment 76352 [details]
post patch behaviour

seems to do the right thing, I'm assuming this is the desired outcome.
Comment 6 Georg Duffner 2013-03-12 06:55:14 UTC
(In reply to comment #5)
> Created attachment 76352 [details]
> post patch behaviour
> 
> seems to do the right thing, I'm assuming this is the desired outcome.

Great! Thanks for fixing!